<resources>
    <string name="app_name">AMDb</string>
    <string name="action_settings">Settings</string>
    <string name="viewer_review">Viewer Review:</string>
    <string name="max_rating">/10</string>
    <string name="release_date">Release Date</string>
    <string name="action_sort_order">sort order</string>

    <string name="prefs_sort_order" translatable="false">sort_order</string>
    <string name="popularity">Popularity</string>
    <string name="sort_order_popularity" translatable="false">popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="sort_order_rating" translatable="false">top_rated</string>
    <string name="loading">Loading..</string>
    <string name="error_getting_data">Error getting data!</string>
    <string name="movie_backdrop">Movie Backdrop</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in tortor eget turpis facilisis sodales vel sit amet justo. Donec luctus lorem vel sollicitudin dictum. Nunc iaculis lacus a turpis imperdiet aliquam. Vivamus mattis nisl sit amet nulla posuere, a viverra enim gravida. Nullam tristique aliquet nisl, eget commodo eros consectetur at. Praesent lectus diam, ornare vel nisi dictum, hendrerit ornare sem. Aliquam vestibulum convallis ante. Nam nec euismod est, sit amet malesuada erat. Mauris sit amet neque quis lorem blandit lacinia. Etiam mi ante, sagittis non fringilla sed, ultricies eu dui. Morbi scelerisque velit non turpis lacinia, sed vestibulum nulla molestie. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent bibendum viverra odio, semper sagittis massa feugiat nec.</string>
    <string name="reviews">Reviews</string>
    <string name="trailers">Trailers</string>
    <string name="movie_trailer_thumbnail">Movie Trailer Thumbnail</string>
    <string name="average_review">Average Review</string>
    <string name="favourites">Favourites</string>
    <string name="no_favourites">No Favourites Found!</string>
</resources>
