<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading" />

    </LinearLayout>

    <TextView
        android:id="@+id/error_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:drawableTop="@drawable/notification_error"
        android:text="@string/error_getting_data"
        android:textSize="18sp"
        android:visibility="gone" />


    <ScrollView
        android:id="@+id/movie_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="5dp"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="xyz.cybersapien.amdb.DetailActivity">

            <ImageView
                android:id="@+id/detail_backdrop_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/movie_backdrop"
                tools:src="@drawable/movie_placeholder" />

            <TextView
                android:id="@+id/detail_movie_title"
                style="@style/TextAppearance.AppCompat.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingStart="5dp"
                tools:text="Title" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detail_poster_image"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:src="@drawable/movie_placeholder"
                    android:contentDescription="@string/movie_poster" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/detail_movie_desc"
                        style="@style/AlertDialog.AppCompat.Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        tools:text="Dummy Text for the Data just for FuN!" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/viewer_review" />

                        <TextView
                            android:id="@+id/detail_movie_rating"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingStart="10dp"
                            android:textSize="20sp"
                            tools:text="3.4" />

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/max_rating" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp">

                        <TextView
                            style="@style/TextAppearance.AppCompat.Subhead"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/release_date" />

                        <TextView
                            android:id="@+id/detail_movie_release"
                            style="@style/TextAppearance.AppCompat.Small"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingLeft="10dp"
                            android:paddingStart="10dp"
                            android:textSize="20sp"
                            tools:text="3.4" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>